--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | Advice generator app</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
+
 <body>
-
-  Advice #<!-- Advice ID goes here -->
-
-  "<!-- Advice text goes here -->"
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <!-- Advice ID goes here -->
+  <div class="container">
+    <div class="adviceContainer">
+      <h1>Advice #<span id="adviceNumber"></span></h1>
+      <p id="advice">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate, porro!</p>
+      <img src="images/pattern-divider-desktop.svg" alt="separator">
+      <button class="btn" id="diceButton">
+        <div>
+          <img src="images/icon-dice.svg" alt="dice">
+        </div>
+      </button>
+    </div>
   </div>
+  <!-- Advice text goes here -->
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="twozer00.dev">TwoZer00</a>.
+  </div>
+  <script src="script.js" type="module"></script>
 </body>
+
 </html>
